# minutus

./: .gitignore  .markdownlint.config.json  Cargo.toml  LICENSE  README.md  Rakefile  release_manual.md
.github/workflows/: lint.yml  test.yml
examples/: Rakefile  run_examples.sh
examples/custom-mruby/: .gitignore  Cargo.toml  build.rs  build_config.rb
examples/custom-mruby-3_1_0/: Cargo.toml  build.rs  build_config.rb
examples/custom-mruby-3_1_0/src/: main.rs
examples/custom-mruby-3_2_0/: Cargo.toml  Rakefile  build.rs  some_script.rb
examples/custom-mruby/src/: main.rs
examples/mruby-polars/: .gitignore  Cargo.toml  LICENSE  README.md  Rakefile  mrbgem.rake  mruby-polars.gem
examples/mruby-polars/.github/workflows/: ci.yml
examples/mruby-polars/mrblib/: mrb_polars.rb
examples/mruby-polars/src/: lib.rs  mrb_polars.c  mrb_polars.h
examples/mruby-polars/test/: mrb_polars.rb
examples/plain-mruby/: Cargo.toml
examples/plane-mruby/: Cargo.toml
examples/plane-mruby/src/: main.rs
minutus/: .gitignore  Cargo.toml  build.rs  build_config.rb
minutus-macros/: Cargo.toml
minutus-macros-type/: Cargo.toml
minutus-macros-type/src/: lib.rs
minutus-macros/src/: class_deriviation_generator.rs  funcall_generator.rs  lib.rs  method_generator.rs  name_generator.rs  tuple.rs
minutus-mrbgem-template/: .gitignore  Cargo.toml  build.rs  build_config.rb  test.sh  test_with_dependency.sh
minutus-mrbgem-template/src/: main.rs
minutus-mrbgem-template/src/templates/: lib.rs  mrbgem.rake  test.rb
minutus-mruby/: Cargo.toml  build.rs
minutus-mruby-build-utils/: Cargo.toml
minutus-mruby-build-utils/src/: lib.rs
minutus-mruby/bridge/: all.rb  data.rb  other.rb  predicates.rb  types.rb  values.rb
minutus-mruby/src/: bridge.c  lib.rs
minutus-test/: Cargo.toml
minutus-test/cargo_tomls/: 3_1_0.toml  3_2_0.toml  3_3_0.toml  master.toml
minutus-test/src/: main.rs  test_array.rs  test_evaluator.rs  test_funcall.rs  test_hash.rs  test_option.rs  test_point.rs  test_ref_cell.rs  test_tuple.rs  test_utils.rs
minutus/bridge/: all.rb  exception.rb  gc.rb  hash.rb  types.rb
minutus/src/: bridge.c  data.rs  evaluator.rs  lib.rs  mruby.rs  utils.rs
minutus/src/bridge/: all.rb  array.rb  exception.rb  methods.rb  other.rb  string.rb  symbol.rb  types.rb  values.rb
minutus/src/types/: array.rs  bool.rs  float.rs  hash.rs  integer.rs  mod.rs  option.rs  r_symbol.rs  string.rs  tuples.rs  unit.rs  values.rs
test-abort/: Cargo.toml
test-abort/src/: lib.rs
