# crate definition for testing README.md
[package]
name = "minutus-readme-test"
version = "0.3.2"
publish = []

[dependencies]
doc-comment = "0.*"
minutus = { path = "minutus", features = ["mruby_3_2_0", "link_mruby"] }

# workspace settings

[workspace]
members = [
    "minutus",
    "minutus-macros",
    "minutus-mruby-build-utils",
    "minutus-mrbgem-template",
    "minutus-test",
]
exclude = ["examples"]

[workspace.metadata.workspaces]
no_individual_tags = true
allow_branch = "trunk"
