# crate definition for testing README.md
[package]
name = "minutus-readme-test"
version = "0.3.2"
publish = []

[dependencies]
doc-comment = "0.3.3"
minutus = { path = "minutus", features = ["link_mruby"] }

# workspace settings

[workspace]
members = [
    "minutus",
    "minutus-macros",
    "minutus-mruby-build-utils",
    "minutus-mrbgem-template",
    "minutus-test",
]
exclude = ["examples"]

[workspace.metadata.workspaces]
no_individual_tags = true
allow_branch = "trunk"
