[package]
name = "minutus-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
convert_case = "0.5.0"

[lib]
proc-macro = true
