[package]
name = "minutus-macros"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "Procedural macro definitions for minutus"

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
convert_case = "0.5.0"

[lib]
proc-macro = true
