[package]
name = "minutus-macros"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "Procedural macro definitions for minutus"
repository = "https://github.com/genya0407/minutus"

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.*"
quote = "1.*"
syn = { version = "1.*", features = ["full", "extra-traits"] }
convert_case = "0.6.0"

[lib]
proc-macro = true
