[package]
name = "minutus-mrbgem-template"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "mrbgem generator integrated with minutus"

[build-dependencies]
minutus = { version = "0.2.0", path = "../minutus", features = ["mruby_3_1_0"] }

[dependencies]
minutus = { version = "0.2.0", path = "../minutus", features = ["mruby_3_1_0"] }
maplit = "1.0.2"
argopt = "0.3.0"
convert_case = "0.5.0"
anyhow = "1.0.60"
tera = "1.16.0"
lazy_static = "1.4.0"
