[package]
name = "minutus-mrbgem-template"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "mrbgem generator integrated with minutus"
repository = "https://github.com/genya0407/minutus"
keywords = ["cli", "mruby", "ruby"]
categories = ["command-line-utilities"]

[build-dependencies]
minutus = { version = "0.4.0", path = "../minutus", features = ["mruby_3_1_0"] }

[dependencies]
minutus = { version = "0.4.0", path = "../minutus", features = ["mruby_3_1_0"] }
maplit = "1.*"
argopt = "0.*"
convert_case = "0.*"
anyhow = "1.*"
tera = "1.*"
lazy_static = "1.*"
