[package]
name = "minutus-mruby-build-utils"
version = "0.3.2-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "Build utilities for minutus"
repository = "https://github.com/genya0407/minutus"

[dependencies]
anyhow = "1.*"
bytes = "1.*"
tar = "0.*"
reqwest = { version = "0.*", features = ["blocking"] }
flate2 = "1.*"
cc = "1.*"
