[package]
name = "minutus"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "mruby bridge for Rust"

[build-dependencies]
minutus-mruby-build-utils = { version = "0.2", path = "../minutus-mruby-build-utils" }
anyhow = "1.0"
bindgen = "0.60.1"
cc = "1.0.73"

[dependencies]
minutus-macros = { version = "0.2", path = "../minutus-macros" }
minutus-mruby-build-utils = { version = "0.2", path = "../minutus-mruby-build-utils" }

[features]
mruby_3_1_0 = []
mruby_master = []
link_mruby = []
