[package]
name = "minutus"
version = "0.3.2-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "mruby bridge for Rust"
repository = "https://github.com/genya0407/minutus"
keywords = ["mruby", "ruby"]
categories = ["api-bindings", "development-tools::ffi"]
readme = "../README.md"

[build-dependencies]
minutus-mruby-build-utils = { version = "0.3.2-alpha.1", path = "../minutus-mruby-build-utils" }
anyhow = "1.0"
bindgen = "0.60.1"
cc = "1.0.73"
bytes = "1.2.1"
tar = "0.4.38"
flate2 = "1.0.24"

[dependencies]
minutus-macros = { version = "0.3.0", path = "../minutus-macros" }
minutus-mruby-build-utils = { version = "0.3.2-alpha.1", path = "../minutus-mruby-build-utils" }
doc-comment = "0.3.3"

[features]
mruby_3_1_0 = []
mruby_master = []
link_mruby = []
