[package]
name = "minutus"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
description = "mruby bridge for Rust"
repository = "https://github.com/genya0407/minutus"
keywords = ["mruby", "ruby"]
categories = ["api-bindings", "development-tools::ffi"]
readme = "../README.md"

[build-dependencies]
minutus-mruby-build-utils = { version = "0.5.0", path = "../minutus-mruby-build-utils" }
anyhow = "1.*"
bindgen = "0.69.1"
cc = "1.*"
bytes = "1.*"
tar = "0.4.40"
flate2 = "1.*"

[dependencies]
minutus-macros = { version = "0.5.0", path = "../minutus-macros" }
minutus-mruby-build-utils = { version = "0.5.0", path = "../minutus-mruby-build-utils" }

[features]
mruby_3_1_0 = []
mruby_3_2_0 = []
mruby_master = []
link_mruby = []
